--- a/app/views/updateWine.scala.html
+++ b/app/views/updateWine.scala.html
@@ -10,7 +10,7 @@
         <a href="@routes.WineController.catalogPage(login,true)" class = "link">На главную страницу </a>
         <h1 class="g1">Редактирование товара</h1>
 
-        @helper.form(action = routes.WineController.updateWineInfo(win.getId_product,login), 'id -> "slick-login"){
+        @helper.form(action = routes.WineController.updateWineInfo(win.getIdProduct,login), 'id -> "slick-login"){
 
             <table>
                 <tr>
