--- a/app/views/indexProjectPage.scala.html
+++ b/app/views/indexProjectPage.scala.html
@@ -1,4 +1,5 @@
-@(login : String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm],registrationForm : play.data.Form[User],error:Integer)
+@(login : String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm],registrationForm : play.data.Form[User],error:Integer,
+        dinamicForm:play.data.DynamicForm)
 <html>
 
     <head>
@@ -16,7 +17,7 @@
         </div>
         }
         @main("О проекте"){
-        @projectPage(login,isAdmin,bookForm,registrationForm,error)
+        @projectPage(login,isAdmin,bookForm,registrationForm,error,dinamicForm)
 
     }
 
