--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -1,4 +1,5 @@
-@(login:String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm], registrationForm : play.data.Form[User], error: Integer)
+@(login:String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm], registrationForm : play.data.Form[User], error: Integer,
+        dinamicForm: play.data.DynamicForm)
 <html>
  @*0 -no error , if 1 - error*@
     <head>
@@ -16,6 +17,7 @@
     <body>
        <div align="center">
        <h2>Barton & Guestier</h2>
+
 
                <!-- Модальное окно №1 -->
            <a href="#x" class="overlay" id="win1"></a>
@@ -110,8 +112,7 @@
                         @if(login.isEmpty ) {
                             <li><a href="#win1" class="button button-green">Вход</a></li>
                             <li><a href="#win2" class="button button-green">Регистрация</a></li>
-                            @*<li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>*@
-                            @*<li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>*@
+
                         }
                         @if(!(login.isEmpty)){
                             <li><a href="@routes.LoginController.logout()">Выход</a></li>
@@ -125,25 +126,19 @@
 
         <ul id="nav">
 
-
-            @if(login.isEmpty) {
-
-                <li><a href="@routes.mainPageController.contactPage("",isAdmin)">Контакты </a ></li>
-                <li><a href="@routes.WineController.catalogPage("",isAdmin)">Каталог </a></li>
-                <li><a href="@routes.mainPageController.projectPage("",isAdmin)">О проекте </a></li>
-                <li><a href="@routes.BasketController.basketPage("",isAdmin)">Корзина </a></li>
-            }
-            @if(!(login.isEmpty)) {
-
                 <li><a href="@routes.mainPageController.contactPage(login,isAdmin)">Контакты </a ></li>
                 <li><a href="@routes.WineController.catalogPage(login,isAdmin)">Каталог </a></li>
-                <li><a href="@routes.mainPageController.projectPage(login,isAdmin)">О проекте </a></li>
+                @helper.form(action = routes.mainPageController.projectPage2) {
+                    <input type="hidden" name="login" value="@login">
+                    <input type="hidden" name="isAdmin" value="@isAdmin">
+                    <input type="submit" value="О проекте">
+                }
                 <li><a href="@routes.BasketController.basketPage(login,isAdmin)">Корзина </a></li>
 
                 @if(isAdmin){
                     <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
                 }
-            }
+
 
         </ul>
             <table class="start">
